added goal desdription
